--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -49,7 +49,8 @@ jobs:
       - name: D
         run: |
           sleep 10
-          echo "D success"
+          echo "D failed"
+          exit 1
 
   E:
     runs-on: ubuntu-20.04
